fix alignment

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
 
-  tex-align:center;
+  text-align:center;
 
   
   /* background:#F15152; */
